added speed controls

--- a/speechapi-video/index.html
+++ b/speechapi-video/index.html
@@ -25,11 +25,13 @@
 			<li id="vidVolOff">"video volume off"</li>
 			<li id="vidVolInc">"video volume increase"</li>
 			<li id="vidVolDec">"video volume decrease"</li>
+			<li id="vidSpdInc">"video speed increase"</li>
+			<li id="vidSpdDec">"video speed decrease"</li>
 		</ul>
 	</main>
 	<script src="js/video-speech.js" defer></script>
 	<script>
-		var _gaq=[['_setAccount','UA-2046650-1'],['_trackPageview']];(function(a,b){var c=a.createElement(b),d=a.getElementsByTagName(b)[0];c.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";d.parentNode.insertBefore(c,d)})(document,"script");
+	//	var _gaq=[['_setAccount','UA-2046650-1'],['_trackPageview']];(function(a,b){var c=a.createElement(b),d=a.getElementsByTagName(b)[0];c.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";d.parentNode.insertBefore(c,d)})(document,"script");
 	</script>
 </body>
 </html>
